--- a/HangmanGameHome.css
+++ b/HangmanGameHome.css
@@ -1,6 +1,8 @@
 body{
 	display: flex;
 	flex-direction: column;
+	margin-left: 5%;
+	margin-right: 5%;
 }
 nav{
 	display:flex;
@@ -31,6 +33,8 @@ nav ul li{
 	display: flex;
 	border: solid;
 	justify-content: space-around;
+	margin: 3%;
+	padding: 2%;
 }
 #container #state-and-giveup{
 	display: flex;
@@ -42,10 +46,16 @@ nav ul li{
 	width:20%;
 	border: solid;
 	border-color: rgb(100,50,105);
+	padding: 1%;
+}
+#container #top-of-container #alphabet #letter-container{
+	display:flex;
+	flex-wrap:wrap;
+
 }
 #container #top-of-container #alphabet button{
 	width:15%;
-	height:25%;
+	height:40%;
 	margin:2%;
 }
 #container #word-container{
@@ -53,6 +63,7 @@ nav ul li{
 	flex-direction: column;
 	border: solid;
 	border-color: rgb(140,140,0);
+	margin: 3%;
 
 }
 #container #word-container #secret-letters{
@@ -68,7 +79,8 @@ nav ul li{
 	display: flex;
 	flex-direction: column;
 	border: solid;
-	border-color: rgb(0,250,180);
+	border-color: rgb(0,0,200);
+	margin: 2%;
 }
 #container #card-container #cards{
 	display: flex;
