--- a/HangmanGameHome.css
+++ b/HangmanGameHome.css
@@ -50,6 +50,7 @@ nav ul li{
 }
 #container #top-of-container #alphabet #letter-container{
 	display:flex;
+	justify-content: center;
 	flex-wrap:wrap;
 }
 #container #top-of-container #alphabet button{
